WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68766
JIT implementation of put_by_val increments m_length instead of setting it to index+1
https://bugs.webkit.org/show_bug.cgi?id=68766
Summary
JIT implementation of put_by_val increments m_length instead of setting it to...
Filip Pizlo
Reported
2011-09-24 15:19:32 PDT
This results in regressions in a variety of tests, including ./js1_6/Array/regress-290592.js.
Attachments
the patch
(1.44 KB, patch)
2011-09-24 15:21 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2011-09-24 15:21:48 PDT
Created
attachment 108590
[details]
the patch
Geoffrey Garen
Comment 2
2011-09-24 16:10:08 PDT
Comment on
attachment 108590
[details]
the patch r=me
WebKit Review Bot
Comment 3
2011-09-24 19:19:48 PDT
Comment on
attachment 108590
[details]
the patch Clearing flags on attachment: 108590 Committed
r95918
: <
http://trac.webkit.org/changeset/95918
>
WebKit Review Bot
Comment 4
2011-09-24 19:19:52 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug