JIT implementation of put_by_val increments m_length instead of setting it to index+1 https://bugs.webkit.org/show_bug.cgi?id=68766

Reviewed by Geoffrey Garen.

* jit/JITPropertyAccess.cpp:
(JSC::JIT::emit_op_put_by_val):


Canonical link: https://commits.webkit.org/84736@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95918 268f45cc-cd09-0410-ab3c-d52691b4dbfc